# TorchRBM

./: .gitignore  ExMNIST_L.py  LICENSE  Plot_MNIST.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
models/: README.md
notebooks/: analyze_RBM.ipynb  analyze_RBM_binary.ipynb  analyze_RBM_potts.ipynb  test_thetered_2D.ipynb
notebooks/.ipynb_checkpoints/: analyze_RBM-checkpoint.ipynb
rbm/: dataset.py  io.py  plot.py  train_rbm.py  utils.py
rbm/binary/: functions.py  grad.py  pcd.py  train.py
rbm/potts/: functions.py  grad.py  pcd.py  sampling.py  train.py
src/: dataset.py  rbm.py  torch_utils_binary.py  torch_utils_categorical.py  train.py  utils.py
src/.ipynb_checkpoints/: train-checkpoint.py
src/RBMs/: BernoulliBernoulliRBM.py  PottsBernoulliRBM.py
src/RBMs/.ipynb_checkpoints/: BernoulliBernoulliRBM-checkpoint.py  PottsBernoulliRBM-checkpoint.py
torchrbm/: custom_fn.py  dataset.py  fasta_utils.py  io.py  train_rbm.py
torchrbm/binary/: functions.py  grad.py  pcd.py  sampling.py  train.py
torchrbm/potts/: analysis.py  functions.py  grad.py  pcd.py  sampling.py  train.py
